set max heap size